CHANGELOG
=========

* Paella 5.2.9

  * Bug fixed in arrow slide navigator plugin

* Paella 5.2.8

  * Buf fixes and improvements

* Paella 5.2.7

  * Improvements and bug fixes in HLS.
  
* Paella 5.2.6

  * HLS streams in Safari for macOS now uses the native hls player.
  
* Paella 5.2.5

  * HLS streams limited to one simultaneous stream on iOS, to prevent memory problems on old iOS devices.

* Paella 5.2.4

  * Bug fixed in zoom plugin, in Safari 11 for macOS 10.13
  * Autoplay settings updated to take account of the upcoming browser restrictions in Safari 11 and Chrome 64
  * Bug fixed in zoom plugin, when some parameters in settings.json are missing.
  * Bug fixed in captions plugin, that prevents to change the captions language in firefox.

* Paella 5.2.3

  * Now the video zoom button in toolbar shows the current zoom level.

* Paella 5.2.2

  * Bug fixed in breaks plugin.
  * Now it's possible to configure the minimum window size to enable the video zoom.
  * Deprecated plugins removed.

* Paella 5.2.1

  * Now it's possible to specify the video, preview and title using URL parameters.
  * Visual improvements in breaks plugin.
  
* Paella 5.2.0

  * New video plugin: HLS player.
  * Zoom on videos.
  * Two new video zoom plugins.
  * Video title plugin.
  * Dual video playback in iOS 10.3 and above.
  * Multiple audio stream selector (compatible with desktop browsers).
  * WebVTT subtitle support.
  * New multi language audio selector plugin.
  * Refactoring, improvements and bug fixes.

* Paella 5.1.14

  * Fix error changing quality in mpeg dash streams.

* Paella 5.1.13

  * Bug fixed in window title plugin

* Paella 5.1.12

  * Fix some issues when changing profile (#249)
  * Improvements in trimmed videos.
  * Fix some warning on build (#255)
  * Fix caption issues in trimmed videos (#260)

* Paella 5.1.11

  * Fix some issues playing live streams.

* Paella 5.1.10

  * Fix compilation error in blackboard profile selection.

* Paella 5.1.9
