@@ -4,10 +4,11 @@ CHANGELOG
 * Paella 5.2.9
 
   * Bug fixed in arrow slide navigator plugin
+  * Added configUrl parameter to paella.load options
 
 * Paella 5.2.8
 
-  * Buf fixes and improvements
+  * Bug fixes and improvements
 
 * Paella 5.2.7
 
